--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -121,6 +121,10 @@
     display: flex;
   }
 
+  .sidebar-header {
+    padding-left: 56px;
+  }
+
   .sidebar-overlay {
     display: block;
     position: fixed;
